--- a/config/boards/arm/praxis/praxis_defconfig
+++ b/config/boards/arm/praxis/praxis_defconfig
@@ -2,7 +2,7 @@
 
 CONFIG_SOC_SERIES_NRF52X=y
 CONFIG_SOC_NRF52840_QIAA=y
-CONFIG_BOARD_ONE42=y
+CONFIG_BOARD_PRAXIS=y
 
 # Enable MPU
 CONFIG_ARM_MPU=y
