--- a/config/boards/arm/praxis/praxis_defconfig
+++ b/config/boards/arm/praxis/praxis_defconfig
@@ -22,3 +22,5 @@ CONFIG_FLASH_MAP=y
 # Boot HID CONFIG
 CONFIG_USB_HID_BOOT_PROTOCOL=y
 CONFIG_ZMK_HID_REPORT_TYPE_HKRO=y
+
+CONFIG_BUILD_OUTPUT_UF2=y
