--- a/config/boards/arm/mouse/nezumi_defconfig
+++ b/config/boards/arm/mouse/nezumi_defconfig
@@ -2,7 +2,7 @@
 
 CONFIG_SOC_SERIES_NRF52X=y
 CONFIG_SOC_NRF52840_QIAA=y
-CONFIG_BOARD_PRAXIS=y
+CONFIG_BOARD_NEZUMI=y
 
 # Enable MPU
 CONFIG_ARM_MPU=y
@@ -10,7 +10,10 @@ CONFIG_ARM_MPU=y
 # Enable GPIO
 CONFIG_GPIO=y
 
+CONFIG_ZMK_SLEEP=y
+
 CONFIG_USE_DT_CODE_PARTITION=y
+CONFIG_BUILD_OUTPUT_UF2=y
 
 CONFIG_MPU_ALLOW_FLASH_WRITE=y
 CONFIG_NVS=y
@@ -23,4 +26,5 @@ CONFIG_FLASH_MAP=y
 CONFIG_USB_HID_BOOT_PROTOCOL=y
 CONFIG_ZMK_HID_REPORT_TYPE_HKRO=y
 
-CONFIG_BUILD_OUTPUT_UF2=y
+# nRF52840 can handle faster USB polling
+CONFIG_USB_HID_POLL_INTERVAL_MS=1
