--- a/config/boards/arm/mouse/nezumi.dts
+++ b/config/boards/arm/mouse/nezumi.dts
@@ -51,7 +51,7 @@
     };
 
     kscan_left: kscan_left {
-        compatible="zmk,kscan-gpio-direct"
+        compatible="zmk,kscan-gpio-direct";
         label = "KSCAN_LEFT";
 
         debounce-press-ms = 0;
