--- a/config/boards/arm/mouse/nezumi.dts
+++ b/config/boards/arm/mouse/nezumi.dts
@@ -62,7 +62,7 @@
     };
 
     kscan_right: kscan_right {
-        compatible="zmk,kscan-gpio-direct"
+        compatible="zmk,kscan-gpio-direct";
         label = "KSCAN_RIGHT";
 
         input-gpios
