update with mouse keymaps

--- a/config/nezumi.conf
+++ b/config/nezumi.conf
@@ -2,6 +2,9 @@
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
+# Uncomment to enable mouse settings
+CONFIG_ZMK_MOUSE=y
+
 # Uncomment to enable fuel gauge sensor
 CONFIG_I2C=y
 CONFIG_MAX17055=y
