--- a/config/west.yml
+++ b/config/west.yml
@@ -2,12 +2,12 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    - name: ftc
-      url-base: https://github.com/ftc
+    - name: EricDracula
+      url-base: https://github.com/EricDracula
   projects:
     - name: zmk
-      remote: ftc
-      revision: mouse-ftc
+      remote: EricDracula
+      revision: dracula-test
       import: app/west.yml
   self:
     path: zmk-config
